Completed the webpage creation with all the format and details applied as said in the project description.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,67 @@
-<!-- test entry -->
-
+<!DOCTYPE html>
 <html>
-  
+    <head>
+        <meta charset="utf-8">
+        <title>Solo-Travel</title>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
+
+    <body>
+        <div class="header">
+            <img class="logo" src="./images/Logo.jpg" alt="Logo">
+            <div class="toplinks">
+                <ul>
+                    <li><a href="">Plan My trip</a> </li>
+                    <li><a href="">Offers and deals</a></li>
+                    <li><a href="">About us</a></li>
+                </ul>
+            </div>          
+        </div>
+        <div class="header" >
+            <div class="top-left">
+                <div class="mainline"> Plan your solo trip with no trouble at all</div>
+                <div class="text"> Solo travel not only pushes you out of your comfort zone, it also pushes you out of the zone of others' expectations. Start exploring now!</div>
+                <button>Sign up</button>
+            </div>
+            <div class="top-right">
+                <img class="topimg" src="./images/topimg.jpg" alt="Logo">
+            </div>
+        </div>
+        <div class="info">
+            <div class="infohdr">Need help? Explore these curated solo trip plans</div>
+            <div class="grid">
+                <div class="grid1">
+                    <img class="gridimg" src="./images/mountain.jpg" alt="Logo1">
+                    <div class="imgtxt"> Mountains - Enjoy the lush green mountains and valleys of Western ghats.</div>
+                </div>
+
+                <div class="grid1">
+                    <img class="gridimg" src="./images/beach.jpg" alt="Logo2">
+                    <div class="imgtxt"> The way of the water - Beaches,mini shacks and a beautiful sunset makes it a perfect choice</div>
+                </div>
+                <div class="grid1">
+                    <img class="gridimg" src="./images/wineyard.jpg" alt="Logo3">
+                    <div class="imgtxt"> Wineyard shenanigans - Explore the beautiful wineyards of Nashik and also make your own wine!</div>
+                </div>
+                <div class="grid1">
+                    <img class="gridimg" src="./images/tribe.jpg" alt="Logo4">
+                    <div class="imgtxt"> Tribal indulgence - Curious about the tribal ways? Live with them and understand the harmony between man and nature. </div>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <div> "There are some places in life where you can only go alone. Embrace the beauty of your solo journey." </div>
+            <div style="text-align: right;"><strong>-Mandy Hale</strong></div>
+        </div>
+        <div class="signup">
+            <div>
+                <div><strong> Register now to avail amazing deals!</strong></div>
+                <div class="text">Signup to enjoy free booking service as joining bonus.</div>
+            </div>
+            <button class="btn">Signup</button>
+        </div>
+        <div class="footer">
+            <div class="text"> Copyright &copy; The odin project</div>
+        </div>
+    </body>
 </html>
